finish all tests, minor changes to code